[gd_scene load_steps=3 format=2]

[ext_resource path="res://Weapons/Bullets/BulletSpawner.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Bullets/Bullet.tscn" type="PackedScene" id=2]

[node name="BulletSpawner" type="Node2D"]
script = ExtResource( 1 )
BulletScene = ExtResource( 2 )
bullet_speed = 5.0

[node name="TimerCooldown" type="Timer" parent="."]
one_shot = true

[node name="TimerAutoFire" type="Timer" parent="."]
one_shot = true
